FAVRDK-79: Add anchor tag instead of id, and add invisible space for header height, and change header styling to be more readable. Fix bug in submenu if no section id was found.

--- a/webroot/sites/favrskov.dk/themes/custom/favrskov/build-assets/src/_base/_base.css
+++ b/webroot/sites/favrskov.dk/themes/custom/favrskov/build-assets/src/_base/_base.css
@@ -27,19 +27,39 @@ body {
   position: relative;
   width: 100%;
   margin: 0;
-  padding-top: calc(var(--header-height) + var(--meta-menu-height));
+  padding-top: calc((var(--header-height-mobile) * 2) + var(--meta-menu-height-mobile));
 
-  @media (--viewport-sm-max) {
-    padding-top: calc(var(--header-height) + var(--header-height) + var(--meta-menu-height-mobile));
+  @media (--viewport-sm-min) {
+    padding-top: calc((var(--header-height) * 2) + var(--meta-menu-height-mobile));
   }
 
-  @media (--viewport-ms-max) {
-    padding-top: calc(var(--header-height-mobile) + var(--header-height-mobile) + var(--meta-menu-height-mobile));
+  @media (--viewport-md-min) {
+    padding-top: calc(var(--header-height) + var(--meta-menu-height));
   }
 
   &.no-scroll {
     position: fixed;
     overflow-y: scroll;
+  }
+}
+
+/*
+  Add styling for section tag with a id, so it will be placed under header and not behind
+*/
+.anchor-tag::before {
+  content: '';
+  display: block;
+  padding-top: calc(((var(--header-height-mobile) * 2) + var(--meta-menu-height-mobile)));
+  margin-top: calc(-1 * ((var(--header-height-mobile) * 2) + var(--meta-menu-height-mobile)));
+
+  @media (--viewport-sm-min) {
+    padding-top: calc((var(--header-height) * 2) + var(--meta-menu-height-mobile));
+    margin-top: calc(-1 * ((var(--header-height) * 2) + var(--meta-menu-height-mobile)));
+  }
+
+  @media (--viewport-md-min) {
+    padding-top: calc(var(--header-height) + var(--meta-menu-height));
+    margin-top: calc(-1 * (var(--header-height) + var(--meta-menu-height)));
   }
 }
 
